Tag branches/1.3 r3106 as tags/1.3.16